<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#222222"
    android:focusable="true">


    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/musicart" />

    <TextView
        android:id="@+id/title"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/katuka"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@+id/albumArt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/albumName"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/aakasam"
        android:textColor="#8A8C8E"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/albumArt"
        app:layout_constraintStart_toEndOf="@+id/albumArt"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/albumArt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@drawable/ic_play" />


</androidx.constraintlayout.widget.ConstraintLayout>


<!--- starting -->

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/constraintLayout"-->
<!--    android:clickable="true"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:background="#222222"-->
<!--    android:focusable="true">-->

<!--    <SeekBar-->
<!--        android:id="@+id/seekBar"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="2dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <ImageView-->
<!--        android:id="@+id/albumArt"-->
<!--        android:layout_width="48dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:contentDescription="@string/todo"-->
<!--        android:scaleType="fitXY"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0"-->
<!--        app:srcCompat="@drawable/musicart" />-->

<!--    <TextView-->
<!--        android:id="@+id/title"-->
<!--        android:layout_width="172dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:text="@string/katuka"-->
<!--        android:textColor="@color/colorWhite"-->
<!--        app:layout_constraintStart_toEndOf="@+id/albumArt"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/seekBar" />-->

<!--    <TextView-->
<!--        android:id="@+id/albumName"-->
<!--        android:layout_width="172dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:text="@string/aakasam"-->
<!--        android:textColor="#8A8C8E"-->
<!--        android:textSize="10sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/albumArt"-->
<!--        app:layout_constraintStart_toEndOf="@+id/albumArt"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/title"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

<!--    <ImageView-->
<!--        android:id="@+id/play"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/albumArt"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        android:contentDescription="@string/todo"-->
<!--        app:layout_constraintStart_toEndOf="@+id/title"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.125"-->
<!--        app:srcCompat="@drawable/ic_play" />-->


<!--</androidx.constraintlayout.widget.ConstraintLayout>-->